# Causalis

./: .gitignore  README.md  api.html  environment.yml  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  research.html  search.html  searchindex.js  user-guide.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
_modules/: index.html
_sources/examples/: rct_analysis.ipynb.txt
_sources/user-guide/: causal_inference_fundamentals.md.txt  causaldata.md
api/: data.html  eda.html  inference.html  refutation.html
causalis/: __init__.py
causalis/data/: __init__.py  causal_diagnostic_data.py  causal_estimate.py  causaldata.py  causaldata_instrumental.py
causalis/data_contracts/: __init__.py  causal_diagnostic_data.py  causal_estimate.py  causaldata.py  panel_data_scm.py  (+4 more)
docs/: api.md  conf.py  examples.md  index.md  research.md  user-guide.md
docs_new/: causalis.html  index.html  search.js
examples/: 401k.html  design_template.html  dml_ate.html  dml_ate_new_dgp.html  dml_atte.html  eda_test.html  gate.html  rct_analysis.html  rct_design.html  your_first_notebook.html
notebooks/: cuped_dgps.ipynb
research/: dgp_benchmarking.html  doubleml_benchmark.html  rct_benchmark.html  refutation_flow.html
some_testing/: dml_ate.ipynb  gate.ipynb  test dgp for multitreatment.ipynb
tests/: README.md
user-guide/: causal_inference_fundamentals.html  causaldata.html  dml_irm_model.html  inference.html  installation.html  math_eda_irm_refutation.html  refutation.html
(+456 files in other folders)
