[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "causalis"
version = "0.1.3"
description = "A Python toolkit for causal inference and experimentation"
readme = "README.md"
authors = [
    {name = "causalis Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "doubleml",
    "pydantic",
    "catboost"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["causalis", "causalis.*"]

[tool.griffe2md]
docstring_style = "numpy"
